--- a/styles.css
+++ b/styles.css
@@ -63,54 +63,58 @@ html {
   --br-2: 8px;
 
   /* || colors || */
-  --white: #fff;
-  --black: #000;
-  --doc-border: #808080;
-  --showcase-bg: #f5f5f5;
-  --primary: #0ea5e9;
-  --primary-hover: #0284c7;
-  --secondary: #71717a;
-  --secondary-hover: #52525b;
-  --success: #34d399;
-  --success-hover: #10b981;
-  --warning: #ffa500;
-  --warning-hover: #ff8c00;
-  --danger: #dc2626;
-  --danger-hover: #b91c1c;
-  --alert-primary: #1da1f2;
-  --alert-primary-bg: #ceeafc;
-  --alert-secondary: #fff;
-  --alert-secondary-bg: #0967a0;
-  --alert-secondary-outline: #000;
-  --alert-success: #10b394;
-  --alert-success-bg: #c8faf0;
-  --alert-warning: #e69409;
-  --alert-warning-bg: #fff9cd;
-  --alert-error: #dc2626;
-  --alert-error-bg: #f6c7c7;
-  --alert-info: #4447ee;
-  --alert-info-bg: #c1c2f9;
-  --alert-close-hover: #ff0000;
-  --online: #10b394;
-  --offline: #808080;
-  --idle: #e69409;
-  --dnd: #ff0000;
-  --btn-link-bg: #0ea5e9;
-  --btn-link-hover: #053f59;
-  --btn-link-bg-hover: #47bef4;
-  --card-border: #ebebeb;
-  --card-img-border: #f6f6f6;
-  --card-offer: #059669;
-  --wishlist-hover: #ff0000;
-  --card-dismiss: #d3d3d3;
-  --card-shadow-1: rgba(0, 0, 0, 0.2);
-  --card-shadow-2: rgba(0, 0, 0, 0.19);
-  --text-overlay-bg: #ff0000;
-  --stacked-list-bg: #ffffff;
-  --stacked-list-border: #808080;
-  --stacked-list-hover: #f0f0f0;
-  --input-border: #000;
-  --rating: #03a685;
+  --clr-white: #fff;
+  --clr-black: #000;
+  --clr-doc-border: #808080;
+  --clr-showcase-bg: #f5f5f5;
+  --clr-primary: #0ea5e9;
+  --clr-primary-hover: #0284c7;
+  --clr-secondary: #71717a;
+  --clr-secondary-hover: #52525b;
+  --clr-success: #34d399;
+  --clr-success-hover: #10b981;
+  --clr-warning: #ffa500;
+  --clr-warning-hover: #ff8c00;
+  --clr-danger: #dc2626;
+  --clr-danger-hover: #b91c1c;
+  --clr-alert-primary: #1da1f2;
+  --clr-alert-primary-bg: #ceeafc;
+  --clr-alert-secondary: #fff;
+  --clr-alert-secondary-bg: #0967a0;
+  --clr-alert-secondary-outline: #000;
+  --clr-alert-success: #10b394;
+  --clr-alert-success-bg: #c8faf0;
+  --clr-alert-warning: #e69409;
+  --clr-alert-warning-bg: #fff9cd;
+  --clr-alert-error: #dc2626;
+  --clr-alert-error-bg: #f6c7c7;
+  --clr-alert-info: #4447ee;
+  --clr-alert-info-bg: #c1c2f9;
+  --clr-alert-close-hover: #ff0000;
+  --clr-online: #10b394;
+  --clr-offline: #808080;
+  --clr-idle: #e69409;
+  --clr-dnd: #ff0000;
+  --clr-btn-link-bg: #0ea5e9;
+  --clr-btn-link-hover: #053f59;
+  --clr-btn-link-bg-hover: #47bef4;
+  --clr-card-border: #ebebeb;
+  --clr-card-img-border: #f6f6f6;
+  --clr-card-offer: #059669;
+  --clr-wishlist-hover: #ff0000;
+  --clr-card-dismiss: #d3d3d3;
+  --clr-text-overlay-bg: #ff0000;
+  --clr-stacked-list-bg: #ffffff;
+  --clr-stacked-list-border: #808080;
+  --clr-stacked-list-hover: #f0f0f0;
+  --clr-input-border: #000;
+  --clr-rating: #03a685;
+  --clr-text-gray: #6b7280;
+
+  /* || shadows || */
+  --sdw-card-1: rgba(0, 0, 0, 0.2);
+  --sdw-card-2: rgba(0, 0, 0, 0.19);
+
+  /* || z-indices || */
   --z-index-toast: 9999;
-  --text-gray: #6b7280;
 }
