--- a/components/avatar.css
+++ b/components/avatar.css
@@ -14,7 +14,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--primary);
+  background-color: var(--clr-primary);
 }
 
 .x-sm {
