--- a/components/modal.css
+++ b/components/modal.css
@@ -1,7 +1,7 @@
 .modal-container {
   display: flex;
   flex-direction: column;
-  background-color: var(--white);
+  background-color: var(--clr-white);
   padding: var(--sp-thirtys) 0;
   width: 50%;
   border-radius: var(--br-2);
@@ -20,10 +20,10 @@
 
 .modal-close {
   margin-left: auto;
-  color: var(--secondary);
+  color: var(--clr-secondary);
 }
 .modal-close:hover {
-  color: var(--black);
+  color: var(--clr-black);
 }
 
 .modal-body {
