--- a/components/navigation.css
+++ b/components/navigation.css
@@ -4,7 +4,7 @@
   justify-content: center;
   width: 100%;
   height: var(--sp-eightys);
-  background-color: var(--white);
+  background-color: var(--clr-white);
 }
 
 .navigation-bar {
