--- a/components/toast.css
+++ b/components/toast.css
@@ -5,27 +5,27 @@
   padding: var(--sp-tens2);
   border-radius: var(--br-1);
   gap: var(--sp-fourtys);
-  font-weight: bold;
+  font-weight: var(--fwt-bold);
   z-index: var(--z-index-toast);
   box-shadow: var(--sp-fractions1) var(--sp-fractions1) var(--sp-fractions2)
-    var(--secondary);
+    var(--clr-secondary);
 }
 
 .toast-btn-close {
   margin-left: auto;
-  color: var(--secondary);
+  color: var(--clr-secondary);
 }
 .toast-btn-close:hover {
-  color: var(--secondary);
+  color: var(--clr-secondary);
 }
 
 .toast-dark {
-  background-color: var(--black);
-  color: var(--white);
+  background-color: var(--clr-black);
+  color: var(--clr-white);
 }
 
 .toast-light {
-  background-color: var(--white);
-  color: var(--black);
-  border: 1px solid var(--secondary);
+  background-color: var(--clr-white);
+  color: var(--clr-black);
+  border: 1px solid var(--clr-secondary);
 }
