--- a/components/typography.html
+++ b/components/typography.html
@@ -97,15 +97,15 @@
           <div class="inner-container">
             <h2>Headings</h2>
             <div class="showcase-column">
-                <h1>h1. Minnal heading</h1>
-                <h2>h2. Minnal heading</h2>
-                <h3>h3. Minnal heading</h1>
-                <h4>h4. Minnal heading</h4>
-                <h5>h5. Minnal heading</h5>
-                <h6>h6. Minnal heading</h6>
+                <h1 class="h1">h1. Minnal heading</h1>
+                <h2 class="h2">h2. Minnal heading</h2>
+                <h3 class="h3">h3. Minnal heading</h1>
+                <h4 class="h4">h4. Minnal heading</h4>
+                <h5 class="h5">h5. Minnal heading</h5>
+                <h6 class="h6">h6. Minnal heading</h6>
             </div>
             <iframe
-              src="https://carbon.now.sh/embed/1AcVBcFOV0nyQgiLmZ5n"
+              src="https://carbon.now.sh/embed/smSzG2OJaWHW9a3PNiMm"
               style="
                 width: 100%;
                 height: 100%;
