--- a/index.css
+++ b/index.css
@@ -1,29 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
-
-* {
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-}
-
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: "Lato", sans-serif;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  gap: var(--sp-thirtys);
 }
 
 .landing-heading {
   font-size: var(--f-eightys);
   text-align: center;
-  margin-bottom: 0;
 }
 
 .landing-text {
@@ -33,8 +22,8 @@ html {
 
 .btn-get-started {
   font-size: var(--f-thirtys2);
-  color: white;
-  background-color: blue;
+  color: var(--clr-white);
+  background-color: var(--clr-primary);
   padding: var(--sp-tens2);
   border-radius: var(--br-1);
   border-style: none;
