--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,6 @@
 @import url("/components/modal.css");
 @import url("/components/rating.css");
 @import url("/components/toast.css");
-@import url("/components/grid.css");
-@import url("/components/slider.css");
-
-html {
-  font-size: 62.5%;
-}
 
 :root {
   /* || spacing || */
@@ -65,6 +59,7 @@ html {
   /* || colors || */
   --clr-white: #fff;
   --clr-black: #000;
+  --clr-font-default: #000;
   --clr-doc-border: #808080;
   --clr-showcase-bg: #f5f5f5;
   --clr-primary: #0ea5e9;
@@ -117,4 +112,33 @@ html {
 
   /* || z-indices || */
   --z-index-toast: 9999;
+}
+
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "Lato", sans-serif;
+  font-size: 1.6rem;
+  line-height: 1;
+  font-weight: 400;
+  color: var(--clr-font-default);
+}
+
+button,
+input,
+textarea,
+select {
+  font-size: inherit;
+  font-family: inherit;
+  padding: var(--sp-fractions3);
 }
