style: change color of nav links & border to primary color

--- a/components/alert.html
+++ b/components/alert.html
@@ -20,7 +20,7 @@
     <div class="container">
       <nav class="nav">
         <div class="nav-brand-name">
-          <a href="/index.html" class="link nav-brand-name-link">Minnal UI</a>
+          <a href="/index.html" class="link nav-link">Minnal UI</a>
         </div>
         <ul class="nav-contacts">
           <li class="list">
