--- a/docs/docs.css
+++ b/docs/docs.css
@@ -27,13 +27,14 @@
   display: flex;
   justify-content: space-between;
   padding: var(--sp-thirtys);
-  border-bottom: 1px solid var(--clr-doc-border);
+  /* border-bottom: 1px solid var(--clr-doc-border); */
+  border-bottom: 2px solid var(--clr-primary);
 }
 .nav-brand-name {
   font-weight: var(--fwt-bold);
 }
-.nav-brand-name-link {
-  margin: 0 var(--sp-tens2);
+.nav-brand-name .nav-link {
+  color: var(--clr-primary);
 }
 .nav-contacts {
   display: flex;
@@ -41,7 +42,7 @@
   font-size: var(--f-twentys1);
 }
 .nav-contact-link {
-  color: var(--clr-secondary);
+  color: var(--clr-primary);
 }
 
 /* || content || */
@@ -54,7 +55,8 @@
 .aside {
   flex: 1;
   padding: var(--sp-tens2);
-  border-right: 1px solid var(--clr-doc-border);
+  /* border-right: 1px solid var(--clr-doc-border); */
+  border-right: 2px solid var(--clr-primary);
 }
 .aside-list {
   margin-top: var(--sp-tens2);
@@ -62,7 +64,7 @@
 
 /* || main || */
 .main {
-  flex: 4;
+  flex: 8;
   display: flex;
   flex-direction: column;
   padding: var(--sp-twentys);
